--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -99,5 +99,9 @@
 		<location>/Error.jsp</location>
 	</error-page>
 
+	<session-config>
+		<session-timeout>3</session-timeout>
+	</session-config>
+
 
 </web-app>
